Fixed cloud nav pane not scrolling when it was too tall.

--- a/core/admin/css/main.css
+++ b/core/admin/css/main.css
@@ -1705,7 +1705,7 @@
 	#bigtree_foundry_browser_form { clear: both; margin: 0; }
 	#bigtree_foundry_browser_window .directory { background: #F6F6F6; border-bottom: 1px solid #ccc; color: #666; font-size: 11px; height: 24px; line-height: 24px; overflow: hidden; padding: 0px 10px; text-overflow: ellipsis; white-space: nowrap; }
 	#bigtree_foundry_browser_window .navigation_pane { background: #F6F6F6; border-radius-bottom-left: 2px; border-right: 1px solid #ccc; float: left; height: 338px; padding: 0; width: 149px; }
-	#bigtree_foundry_browser_window .navigation_pane ul { list-style: none; margin: 0; user-select: none; }
+	#bigtree_foundry_browser_window .navigation_pane ul { list-style: none; margin: 0; overflow: auto; user-select: none; }
 	#bigtree_foundry_browser_window .navigation_pane li a { color: #333; display: block; font-size: 10px; height: 20px; line-height: 20px; overflow: hidden; padding: 3px 5px; text-overflow: ellipsis; white-space: nowrap; }
 	#bigtree_foundry_browser_window .navigation_pane li a:hover { background: #e2e2e2; }
 	#bigtree_foundry_browser_window .navigation_pane .cloud_options { background: #FFF; border-bottom: 1px solid #CCC; }
